# External-Sort

./: .bazelrc  .clang-format  .clangd-ignore  .gitignore  BUILD.bazel  Doxyfile  MODULE.bazel  README.md  generate_compile_commands.py  merge_external_sort.py
coverage_report/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage_report/external_sort/include/external_sort/include/: external_sort_logging.hpp.func-c.html  external_sort_logging.hpp.func.html  external_sort_logging.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  k_way_merge_sorter.hpp.func-c.html  k_way_merge_sorter.hpp.func.html  k_way_merge_sorter.hpp.gcov.html
coverage_report/io/include/io/include/: element_buffer.hpp.func-c.html  element_buffer.hpp.func.html  element_buffer.hpp.gcov.html  file_stream.hpp.func-c.html  file_stream.hpp.func.html  file_stream.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  interfaces.hpp.func-c.html  interfaces.hpp.func.html  interfaces.hpp.gcov.html  io_logging.hpp.func-c.html  io_logging.hpp.func.html  io_logging.hpp.gcov.html  memory_stream.hpp.func-c.html  memory_stream.hpp.func.html  memory_stream.hpp.gcov.html  temp_file_manager.hpp.func-c.html  temp_file_manager.hpp.func.html  temp_file_manager.hpp.gcov.html
coverage_report/serialization/include/serialization/include/: index-sort-f.html  index-sort-l.html  index.html  serialization_logging.hpp.func-c.html  serialization_logging.hpp.func.html  serialization_logging.hpp.gcov.html  serializers.hpp.func-c.html  serializers.hpp.func.html  serializers.hpp.gcov.html
external_sort/: BUILD.bazel  README.md
external_sort/benchmarks/: performance_benchmark.cpp
external_sort/examples/: example.cpp
external_sort/include/: external_sort_logging.hpp  k_way_merge_sorter.hpp
external_sort/tests/: complex_types_test.cpp  string_sorting_test.cpp
external_sort/tests/file/: basic_sorting_file_test.cpp  pod_types_file_test.cpp
external_sort/tests/memory/: basic_sorting_memory_test.cpp  pod_types_memory_test.cpp
include/: debug_logger.hpp  element_buffer.hpp  file_stream.hpp  interfaces.hpp  k_way_merge_sorter.hpp  memory_stream.hpp  serializers.hpp  storage_types.hpp  temp_file_manager.hpp  type_concepts.hpp  utilities.hpp
include/impl/: element_buffer.tpp  file_stream.tpp  k_way_merge_sorter.tpp  memory_stream.tpp  utilities.tpp
io/: BUILD.bazel  README.md
io/include/: element_buffer.hpp  file_stream.hpp  interfaces.hpp  io_logging.hpp  memory_stream.hpp  storage_types.hpp  temp_file_manager.hpp
io/tests/: element_buffer_test.cpp  file_stream_test.cpp  memory_stream_test.cpp  temp_file_manager_test.cpp
logging/: BUILD.bazel  README.md
logging/include/: ILogger.hpp  LoggerAdapter.hpp  NullLogger.hpp  Registry.hpp  SpdlogWrapper.hpp
logging/src/: DefaultLogger.cpp  SpdlogWrapper.cpp
scripts/: format-code.sh  run-clang-tidy.sh
serialization/: BUILD.bazel  README.md  serializers.hpp
serialization/examples/: example.cpp
serialization/include/: serialization_logging.hpp  serializers.hpp  type_concepts.hpp
serialization/src/: serialization_logging.cpp  type_concepts.hpp
serialization/tests/: serializing_test.cpp  type_concepts_test.cpp
src/: create_random_test.cpp  create_test_input.cpp  demo.cpp  external_sort_task.cpp  main.cpp  temp_file_manager.cpp  utilities.cpp
tests/: external_adl_serialization_test.cpp  method_serialization_test.cpp  pod_serialization_test.cpp  serializers_concepts_validation_test.cpp  test_element_buffer.cpp  test_file_stream.cpp  test_k_way_merge_sorter.cpp  test_memory_stream.cpp  test_string_sorting.cpp  test_temp_file_manager.cpp  test_template_types.cpp
