load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "serialization",
    hdrs = [
        "include/serializers.hpp",
        "include/type_concepts.hpp",
    ],
    includes = ["include"],
)

cc_test(
    name = "type_concepts_test",
    size = "small",
    srcs = ["tests/type_concepts_test.cpp"],
    copts = ["-std=c++20"],
    deps = [
        ":serialization",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "serializing_test",
    size = "small",
    srcs = ["tests/serializing_test.cpp"],
    copts = ["-std=c++20"],
    deps = [
        ":serialization",
        "@googletest//:gtest_main",
    ],
)
