load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "serialization",
    hdrs = [
        "include/serialization_logging.hpp",
        "include/serializers.hpp",
        "include/type_concepts.hpp",
    ],
    copts = ["-std=c++20"],
    includes = ["include"],
    deps = [
        "//logging",
    ],
)

cc_test(
    name = "type_concepts_test",
    size = "small",
    srcs = ["tests/type_concepts_test.cpp"],
    copts = ["-std=c++20"],
    deps = [
        ":serialization",
        "//logging",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "serializing_test",
    size = "small",
    srcs = ["tests/serializing_test.cpp"],
    copts = ["-std=c++20"],
    deps = [
        ":serialization",
        "//logging",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "example",
    srcs = ["examples/example.cpp"],
    copts = ["-std=c++20"],
    deps = [
        ":serialization",
        "//logging",
        "//logging:spdlog_wrapper",
    ],
)
